--- a/New app/src/App.css
+++ b/New app/src/App.css
@@ -1,38 +1,62 @@
-.App {
-  text-align: center;
+.title {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container, header {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+form{
+  background-color: #98ac41;
+  padding: 4rem;
+  border-radius: 10px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+fieldset{
+  border-radius: 10px;
+  background-color: #687e12;
+}
+.list-title{
+  font-size: 2rem;
+  text-align: center;
+}
+#create-employee {
+  text-align: center;
+  margin-bottom: 3rem;
+}
+#create-employee input {
+  width: 100%;
+}
+#create-employee label {
+  display: block;
+  margin-top: 1rem;
+  margin-bottom: 10px;
+}
+.address {
+  margin-top: 10px;
+}
+a, button {
+  text-decoration: none;
+  border: 1px solid black;
+  border-radius: 20px;
+  padding: 1rem;
+  color: black;
+  font-weight: bold;
+  background-color: #687e12;
+}
+#create-employee button{
+  margin-top: 1rem;
+  padding: 1rem 2rem 1rem 2rem;
+}
+.close{
+  padding: 0.5rem 0.8rem;
+}
+footer {
+  text-align: center;
+  height: 100px;
+}
+.prov {
+  margin-bottom: 1rem;
 }
